syntax = "proto3";

package proto;

message TestPB {
    string name = 1;
    string pwd = 2;
}